# cuda-1d-motion-amplification

./: .gitignore  CMakeLists.txt  build.sh  data.txt
imple/: algorithm.md  plan.md
include/: motion_amp.h
python/: main.py  server.py
python/static/: script.js  style.css
python/templates/: index.html
src/: amplify.cu  gaussian_blur.cu  gaussian_blur_tex2d.cu  histogram.cu  sobel_x.cu  temporal_filter.cu  wrapper.cpp
